<resources>
    <string name="app_name">AcadGildApp</string>

    <string name="red">Red</string>
    <string name="orange">Orange</string>
    <string name="yellow">Yellow</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="indigo">Indigo</string>
    <string name="violet">Violet</string>
    <string name="enterBal">Enter Card Balance($)</string>
    <string name="yearlyInt">Enter Yearly Interest Rate (%)</string>
    <string name="minPam">Enter Minimum Payment ($)</string>
    <string name="finalCardBal">Final Card Balance ($)</string>
    <string name="monthsRemain">Months Remaining</string>
    <string name="paidInt">Interest Paid Will Be ($)</string>
    <string name="compute">COMPUTE</string>
    <string name="clear">CLEAR</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="ascend">Ascend</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_hide_nseek">HideNSeek</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_cred_card">CredCard</string>
    <string name="title_activity_session4_assignment1">Session4Assignment1</string>
    <string name="descend">Descend</string>
    <string name="title_activity_custom_list_view">CustomListView</string>
    <string name="title_activity_gridview">gridview</string>
</resources>
