<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/red"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#FF0000"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/orange"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#FF7F00"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/yellow"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#FFFF00"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/green"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#00FF00"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/blue"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#0000FF"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/indigo"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#4B0082"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/violet"
        android:layout_weight="1"
        android:gravity="center"
        android:background="#9400D3"/>
</LinearLayout>
