<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:text = "@string/enterBal"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearlyInt"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            />
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minPam"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalCardBal"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthsRemain"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paidInt"
            android:textColor="#FFFFFF"
            android:layout_weight="1"/>
        <EditText
            android:layout_width="100dp"
            android:layout_height="35dp"
            android:background="#FFFFFF"
            android:layout_weight="1"
            android:layout_marginLeft="16dp"/>
    </LinearLayout>

</LinearLayout>