<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#000000">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:layout_marginTop="16dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="16dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text = "@string/enterBal"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yearlyInt"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:gravity="center_vertical"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minPam"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finalCardBal"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/monthsRemain"
            android:textColor="#FFFFFF"
            android:layout_weight="1"
            android:gravity="center_vertical"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/paidInt"
            android:textColor="#FFFFFF"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_weight="3"
        android:layout_marginTop="16dp">
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ellipsize="start"
            android:gravity="center"
            android:inputType="text"
            android:background="@drawable/edittextstyle"
            android:layout_weight="1"/>
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ellipsize="start"
            android:gravity="center"
            android:inputType="text"
            android:background="@drawable/edittextstyle"
            android:layout_weight="1"/>
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ellipsize="start"
            android:gravity="center"
            android:inputType="text"
            android:background="@drawable/edittextstyle"
            android:layout_weight="1"/>
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ellipsize="start"
            android:gravity="center"
            android:inputType="text"
            android:background="@drawable/edittextstyle"
            android:layout_weight="1"/>
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ellipsize="start"
            android:gravity="center"
            android:inputType="text"
            android:background="@drawable/edittextstyle"
            android:layout_weight="1"/>
        <EditText
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="15dp"
            android:layout_centerVertical="true"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:ellipsize="start"
            android:gravity="center"
            android:inputType="text"
            android:background="@drawable/edittextstyle"
            android:layout_weight="1"/>

    </LinearLayout>
</LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/compute"
        android:gravity="center"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:gravity="center"/>
</LinearLayout>