<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#20B2AA"
    android:orientation="vertical">

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:hint="@string/email"
        android:layout_marginBottom="16dp"
        android:layout_above="@id/password"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="8dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#FFFFFF"
        android:hint="@string/password"
        android:id="@+id/password"
        android:layout_centerInParent="true"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="8dp"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAllCaps="true"
        android:background="#DCDCDC"
        android:textColor="#20B2AA"
        android:layout_below="@id/password"
        android:layout_marginTop="16dp"
        android:id="@+id/login"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:text="Not a member? Sign up now"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_marginTop="16dp"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"/>


</RelativeLayout>